--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @product.title  %></h1>
 <p>Product price: <%= @product.price %></p>
 <p>Product quantity: <%= @product.stock_quantity %></p>
+<p>Product description: <%= @product.description %></p>
+<p>Product category: <%= @product.category %></p>
